<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AuthBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity" >

    <ImageView
        android:id="@+id/background_image"
        style="@style/AuthBackgroundImage" />

    <TextView
        android:id="@+id/title_textView"
        style="@style/AuthTitle"
        android:text="@string/title_login" />

    <TextView
        android:id="@+id/subtitle_textView"
        style="@style/AuthSubtitle"
        android:layout_below="@+id/title_textView"
        android:text="@string/subtitle_login" />

    <LinearLayout
        android:id="@+id/editTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/subtitle_textView"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/usernameField"
            android:layout_marginTop="@dimen/login_vertical_margin"
            android:hint="@string/username_hint"
            style="@style/AuthExitText" >
            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/passwordField"
            style="@style/AuthExitText" 
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/emailField"
            style="@style/AuthExitText" 
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />
    </LinearLayout>
    
    <ImageView 
        android:id="@+id/buttonDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/button_divider"
        android:layout_below="@id/editTextField"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_alignLeft="@id/editTextField"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextField"
        android:text="@string/sign_up_button_label"
        android:background="@drawable/button_custom"
        android:textColor="@color/button_text_color"
        android:textSize="13sp"
        android:layout_toLeftOf="@id/buttonDivider" />
    
    <Button
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_alignRight="@id/editTextField"
        android:layout_toRightOf="@id/buttonDivider"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextField"
        android:text="@string/cancel_button_label"
        android:background="@drawable/button_custom"
        android:textColor="@color/button_text_color"
        android:textSize="13sp" />

</RelativeLayout>